# myownquantlib

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  main.cpp  vcpkg.json
cmake/: CompilerOptions.cmake
docs/setup/: cmake-tutorial.md
include/myownql/: version.hpp
src/: CMakeLists.txt  placeholder.cpp
tests/: CMakeLists.txt  test_main.cpp
